ArrayDomain: Towards multidimensional arrays, various bugfixes